--- a/projects.html
+++ b/projects.html
@@ -9,80 +9,76 @@
   </head>
   
   <style>
-	  button {padding:10px; color:white; background:none; border:2px solid white; border-radius:5px; font-size:15px; transition:0.5s; min-width:200px;}
-	  button:hover {background:darkcyan; cursor:pointer;}
+	  
   </style>
   
 <body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
 
-  <div class='fullContainer' style='background-color:white; min-height:40%; margin-top:20px;'> 
-    <div class='container' style='color:black;'>
-      <h1>Projects</h1>
-    </div>
-  </div>
+	<div class='titleBar'>
+		<h1>Projects</h1>
+		Various team and personal projects I have worked on
+	</div>
 
 
 
-<div class='columnContainer'>
-	        <img src='files/images/groupPhotoREC2.jpg'>
-      <div>
-	      	<h2 style='margin-top:0'>Ride Engineering Competition</h2>
-          	<p style='margin-top:-10px; margin-bottom:10px;'>Winter - Spring 2024</p>
-	     		<p>Role: <em>Head of Mechanical Design</em></p>
-			<p>Goal: To design, fabricate, and present a fully functional scale rollercoaster featuring multiple safety and controls elements which could thrill Starburst Candies.</p>
-	    		<!--<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
-	   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> -->
-	      		<p><button onclick='window.open("projects/rec-2024", "_self")'>View Project</button></p>
-	      		
-      </div>
-  </div>
+	<div class='columnContainer'>
+		        <img src='files/images/groupPhotoREC2.jpg'>
+	      <div>
+		      	<h2 style='margin-top:0'>Ride Engineering Competition</h2>
+	          	<p style='margin-top:-10px; margin-bottom:10px;'>Winter - Spring 2024</p>
+		     		<p>Role: <em>Head of Mechanical Design</em></p>
+				<p>Goal: To design, fabricate, and present a fully functional scale rollercoaster featuring multiple safety and controls elements which could thrill Starburst Candies.</p>
+		    		<!--<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
+		   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> -->
+		      		<p><button onclick='window.open("projects/rec-2024", "_self")'>View Project</button></p>
+		      		
+	      </div>
+	  </div>
 	
 
-<div class='columnContainer'>
-	        <img src='files/images/flume-inlet-image.jpg'>
-      <div>
-	      	<h2 style='margin-top:0'>River Simulation Flume</h2>
-          	<p style='margin-top:-10px; margin-bottom:10px;'>2023 - 2025</p>
-			<p>Role: <em>Flow Inlet Engineer</em></p>
-			<p>Goal: Design and construct a flume to simulate the flow of a river to test a PHD research theory on flow control</p>
-	    		<!--<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
-	   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> -->
-	      		<p><button onclick='window.open("projects/flume-project", "_self")'>View Project</button></p>
-      </div>
-  </div>
+	<div class='columnContainer'>
+		        <img src='files/images/flume-inlet-image.jpg'>
+	      <div>
+		      	<h2 style='margin-top:0'>River Simulation Flume</h2>
+	          	<p style='margin-top:-10px; margin-bottom:10px;'>2023 - 2025</p>
+				<p>Role: <em>Flow Inlet Engineer</em></p>
+				<p>Goal: Design and construct a flume to simulate the flow of a river to test a PHD research theory on flow control</p>
+		    		<!--<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
+		   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> -->
+		      		<p><button onclick='window.open("projects/flume-project", "_self")'>View Project</button></p>
+	      </div>
+  	</div>
 
-		<div class='columnContainer'>
+	<div class='columnContainer'>
 			<img src='https://d2vlcm61l7u1fs.cloudfront.net/media%2F7f9%2F7f94806f-0c5f-4a10-a841-ebfe45b878f2%2Fphp06nuzn.png'>
 		      <div>
 			      	<h2 style='margin-top:0'>Shaft Design Software Project</h2>
 		          	<p style='margin-top:-10px; margin-bottom:10px;'>Winter 2024</p>
 			     		<p>Role: <em>Programmer</em></p>
 					<p>Goal: Use JavaScript to design a program which could take user-provided input and output the minimum diameter of a machine shaft required to meet a specified factor of safety in given operating and loading conditions.</p>
-			    		<p>This project was completed as part of my <em>Design of Machine Elements</em> course at UC San Diego. It taught me valuable skills in machine design as well as performing algorithmic math in JavaScript.</p>
-			   		<p><b>Skills - </b> Math in JavaScript, Machine Design, Solid Mechanics, HTML</p> 
 			      		<p><button onclick='window.open("https://reuvenrey.github.io/me/projects/shaft-design-project.html")'>View Project</button></p>
 		      </div>
-  		</div>
+  	</div>
 
-<div class='columnContainer'>
+	<div class='columnContainer'>
 	        <img src='https://pbs.twimg.com/media/EmfBgLqUYAAtEfx.jpg'>
-      <div>
-	      	<h2 style='margin-top:0'>Triton Robo-Sub (Robotic Submarine)</h2>
-          	<p style='margin-top:-10px; margin-bottom:10px;'>Winter - Spring 2023</p>
-	      		<p>Role: <em>Mechanical Team</em></p>
-	      		<p>Goal: Improve upon the existing submarine design's mechanical components.</p>
-	      		<p>My role for this specific project was to design and fabricate mounts for the LED headlights on the submarine. I used SolidWorks to design a prototype, 3D printed it, and tested it with our components.</p>
-	      		<p><b>Skills - </b>SolidWorks, Metal Working</p>
-      </div>
-  </div>
+	      <div>
+		      	<h2 style='margin-top:0'>Triton Robo-Sub (Robotic Submarine)</h2>
+	          	<p style='margin-top:-10px; margin-bottom:10px;'>Winter - Spring 2023</p>
+		      		<p>Role: <em>Mechanical Team Member</em></p>
+		      		<p>Goal: Design and prototype a mount to secure LED headlights to the submarine in desired positions which could endure rigorous underwater operation.</p>
+	      </div>
+  	</div>
 
-<div class='columnContainer'>
-	        <img src='https://d2pn8kiwq2w21t.cloudfront.net/original_images/JPL_RedBlack_rgb_stacked_5in_160601.png'>
-      <div>
-	      	<h2 style='margin-top:0'>JPL Invention Challenge</h2>
-          	<p style='margin-top:-10px; margin-bottom:10px;'>2018 - 2020</p>
-      </div>
-  </div>
+	<div class='columnContainer'>
+		        <img src='https://d2pn8kiwq2w21t.cloudfront.net/original_images/JPL_RedBlack_rgb_stacked_5in_160601.png'>
+	      <div>
+		      	<h2 style='margin-top:0'>JPL Invention Challenge</h2>
+	          	<p style='margin-top:-10px; margin-bottom:10px;'>2018 - 2020</p>
+	      </div>
+	  </div>
+
+
 	
     <br><br>
 
