--- a/files/template_page.html
+++ b/files/template_page.html
@@ -25,11 +25,12 @@
 	</div>
 
 	<div class='titleBar'>
-		<h2>Page_Title</h2>
-		<p>Subtitle Text</p>
+		<p>		
+			<h2>Page_Title</h2>
+		</p>
 	</div>
 	<div class='subtitleBar'>
-		<p>Summary_or_introduction</p>
+		<p>Subtitle_of_page</p>
 	</div>
 
 	<div class='container'>
