--- a/projects/rec-2024.html
+++ b/projects/rec-2024.html
@@ -24,22 +24,7 @@
     <title>Pixie Party! | Ride Engineering Competition 2024 | Reuven Reyman</title>
   </head>
   
-  <style>
-	  body{background:black;}
-	  .banner{width:100%; margin:0; padding:0; height:80vh;}
-	  .banner img{width:100%;  height:100%; object-fit:cover; margin:0;}
-
-	  .titleBar{width:100%; background:dimgray; color:white; margin:0; padding:15px; text-align:center;}
-	  .titleBar p{max-width:1100px; margin:auto;}
-
-	  h1{font-size:19px; color:DarkCyan; font-weight:bold;}
-	  h2{color:violet;}
-	  
-	  .spacer{width:90%; max-width:1100px; margin:auto; height:1px; background:#efefef; margin-top:15px; margin-bottom:15px;}
-
-	  a{text-decoration:underline;}
-	  a:hover{cursor:pointer;}
-	  
+  <style>	  
   </style>
   
 <body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
@@ -49,8 +34,10 @@
 	</div>
 
 	<div class='titleBar'>
-		<p><h1 style='color:#efefef'>The 2024 Ride Engineering Competition</h1></p>
-		<p>The <a href='https://www.rideengineeringcompetition.org/'>Ride Engineering Competition</a> provides students with a hands-on opportunity to apply their engineering knowledge and skills in a real-world context. It also fosters collaboration, creativity, and innovation among participants, while offering valuable networking opportunities with industry professionals in the amusement park and entertainment industries.</p>
+		<p><h1>The 2024 Ride Engineering Competition</h1></p>
+	</div>
+	<div class='subtitleBar'>
+				<p>The <a href='https://www.rideengineeringcompetition.org/'>Ride Engineering Competition</a> provides students with a hands-on opportunity to apply their engineering knowledge and skills in a real-world context. It also fosters collaboration, creativity, and innovation among participants, while offering valuable networking opportunities with industry professionals in the amusement park and entertainment industries.</p>
 	</div>
 
 	<div class='container'>
@@ -59,6 +46,7 @@
 			<div>
 				Our submission was a Spinning Rollercoaster titled <em>Pixie Party</em>. The theme consisted of a "Fairy Rave" hosted deep in a magical forest. This idea stemed from two original ideas we had: an 80s disco party, and magical fairies. We couldn't decide which to do, so we combined them! I pitched the idea of a spinning ride vehicle as a way to add some additional excitement to the experience, and thus Pixie Party was born!
 			</div>
+		</div>
 	</div>
 
 	<div class='spacer'></div>
