--- a/files/template_page.html
+++ b/files/template_page.html
@@ -25,9 +25,7 @@
 	</div>
 
 	<div class='titleBar'>
-		<p>		
-			<h2>Page_Title</h2>
-		</p>
+		<h1>PAGE_TITLE</h1>
 	</div>
 	<div class='subtitleBar'>
 		<p>Subtitle_of_page</p>
