--- a/projects/rec-2024.html
+++ b/projects/rec-2024.html
@@ -34,7 +34,7 @@
 	</div>
 
 	<div class='titleBar'>
-		<p><h1>The 2024 Ride Engineering Competition</h1></p>
+		<h1>The 2024 Ride Engineering Competition</h1>
 	</div>
 	<div class='subtitleBar'>
 				<p>The <a href='https://www.rideengineeringcompetition.org/'>Ride Engineering Competition</a> provides students with a hands-on opportunity to apply their engineering knowledge and skills in a real-world context. It also fosters collaboration, creativity, and innovation among participants, while offering valuable networking opportunities with industry professionals in the amusement park and entertainment industries.</p>
