--- a/projects/flume-project.html
+++ b/projects/flume-project.html
@@ -25,9 +25,7 @@
 	</div>
 
 	<div class='titleBar'>
-		<p>		
-			<h2>Page_Title</h2>
-		</p>
+		<h1>Page_title</h1>
 	</div>
 	<div class='subtitleBar'>
 		<p>Subtitle_of_page</p>
