--- a/experience.html
+++ b/experience.html
@@ -9,11 +9,13 @@
   </head>
   
   <style>
+	  .skillContainer{margin:10px; width:100%; padding-left:-5px;}
+	  .skillContainer div{display:inline-block; background:rgba(0,0,0,0.10); color:#efefef; border:1px solid #efefef; border-radius:10px; margin:5px; padding:5px; width:auto;}
   </style>
   
 <body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
 
-  <div class='fullContainer' style='background-color:white; min-height:40%; margin-top:20px;'> 
+  <div class='fullContainer' style='background-color:white; min-height:40%; margin-top:0;'> 
     <div class='container' style='color:black;'>
       <h1>Work Experience</h1>
       <p></p>
@@ -28,7 +30,9 @@
 	      	<h2 style='margin-top:0'>Student Lead, Cafe Ventanas</h2>
           	<p style='margin-top:-10px; margin-bottom:10px;'>UC San Diego | 2021 - Present</p>
           	<p>Here I managed a team of students at a busy on-campus restaurant. As a Student Lead, I was responsible for delegating positions, ensuring students got their breaks, handling minor situations, and ensuring the overall smooth operation of the restaurant. Unlike the managers, student leads are very much "on the ground" handling the nitty-gritty operations which helped me learn to think on my feet and always be on the move in a fast paced work environment.</p>
-		<p>At Cafe Ventanas, I learned team management, how to train and teach, profesionalism, and the ability to multitask.</p>
+		<div class='skillContainer'>
+			<div>Team Management</div> <div>Multi-Tasking</div> <div>Delegation</div> <div>Problem Solving</div>
+		</div>
       </div>
   </div>
 
@@ -38,7 +42,9 @@
 	      	<h2 style='margin-top:0'>Associate Drafter, Resource Management and Planning</h2>
 		<p style='margin-top:-10px; margin-bottom:10px;'>University of California | 2023 - Present</p>
 	        <p>As an Associate Drafter for RMP at UC San Diego, I was in charge of updating and verifying hundreds of the University's CAD Floorplans. In addition to working on the CAD Files, I also was tasked with visiting the physical spaces to verify and update our floorplans. I also interacted with dozens of university employees regarding the floorplans, office locations, and more.</p>
-		<p>Working with RMP, I've learned office communication, teamwork, task management, AutoCAD, Information Management, Customer Service, and Physical Space Analysis</p>
+		<div class='skillContainer'>
+			<div>AutoCAD</div> <div>Jira</div> <div>Space Analysis</div> <div>Communication</div>
+		</div>
       	</div>
   </div>
 
@@ -48,7 +54,9 @@
 	      	<h2 style='margin-top:0'>CAD Tutor, Jacobs School of Engineering</h2>
           	<p style='margin-top:-10px; margin-bottom:10px;'>UC San Diego | 2022 - 2023</p>
           	<p>Created digital content to aid in the teaching of modeling in AutoDesk Fusion 360, tutored students on the use of the software for designing and fabricating components. Supervised and aided students with the use of fabrication equipment, laser cutters, and 3D printers</p>
-		<p>As a CAD Tutor I've gained skills in teaching and further improved my CAD and Design skills. I also perfected the use of industrial fabrication equipment including 3D printers and Laser Cutters.</p>
+		<div class='skillContainer'>	
+		 	<div>Teaching</div> <div>AutoCAD</div> <div>Fabrication</div> <div>3D Printing</div> 
+		</div>
       	</div>
  	 </div>
 
