--- a/experience.html
+++ b/experience.html
@@ -9,8 +9,8 @@
   </head>
   
   <style>
-	  .skillContainer{margin:10px; width:100%; padding-left:-5px;}
-	  .skillContainer div{display:inline-block; background:rgba(0,0,0,0.10); color:#efefef; border:1px solid #efefef; border-radius:10px; margin:5px; padding:5px; width:auto;}
+	  .skillContainer{margin:10px; width:full; padding-left:-5px;}
+	  .skillContainer div{display:inline-block; background:rgba(230,230,230,0.30); color:white; border:none; border-radius:20px; margin:5px; padding:5px; padding-left:10px; padding-right:10px; width:auto;}
   </style>
   
 <body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
