--- a/experience.html
+++ b/experience.html
@@ -29,10 +29,12 @@
           	<p style='margin-top:-10px; margin-bottom:10px;'>UC San Diego | 2021 - Present</p>
           	<p>Here I managed a team of students at a busy on-campus restaurant. As a Student Lead, I was responsible for delegating positions, ensuring students got their breaks, handling minor situations, and ensuring the overall smooth operation of the restaurant. Unlike the managers, student leads are very much "on the ground" handling the nitty-gritty operations which helped me learn to think on my feet and always be on the move in a fast paced work environment.</p>
 		<div class='skillContainer'>
-			<div>Team Management</div> <div>Multi-Tasking</div> <div>Delegation</div> <div>Problem Solving</div>
+			<a>Team Management</a> <a>Multi-Tasking</a> <a>Delegation</a> <a>Problem Solving</a>
 		</div>
       </div>
   </div>
+
+	<br>
 
 	<div class='columnContainer'>
 	        <img src='files/images/podemos1.jpg'>
@@ -41,10 +43,12 @@
 		<p style='margin-top:-10px; margin-bottom:10px;'>University of California | 2023 - Present</p>
 	        <p>As an Associate Drafter for RMP at UC San Diego, I was in charge of updating and verifying hundreds of the University's CAD Floorplans. In addition to working on the CAD Files, I also was tasked with visiting the physical spaces to verify and update our floorplans. I also interacted with dozens of university employees regarding the floorplans, office locations, and more.</p>
 		<div class='skillContainer'>
-			<div>AutoCAD</div> <div>Jira</div> <div>Space Analysis</div> <div>Communication</div>
+			<a>AutoCAD</a> <a>Jira</a> <a>Space Analysis</a> <a>Communication</a>
 		</div>
       	</div>
   </div>
+
+	<br>
 
 	 <div class='columnContainer'>
 	        <img src='https://www.oceanlight.com/stock-photo/jacobs-school-engineering-ucsd-image-20846-915599.jpg'>
@@ -53,10 +57,12 @@
           	<p style='margin-top:-10px; margin-bottom:10px;'>UC San Diego | 2022 - 2023</p>
           	<p>Created digital content to aid in the teaching of modeling in AutoDesk Fusion 360, tutored students on the use of the software for designing and fabricating components. Supervised and aided students with the use of fabrication equipment, laser cutters, and 3D printers</p>
 		<div class='skillContainer'>	
-		 	<div>Teaching</div> <div>AutoCAD</div> <div>Fabrication</div> <div>3D Printing</div> 
+		 	<a>Teaching</a> <a>AutoCAD</a> <a>Fabrication</a> <a>3D Printing</a> 
 		</div>
       	</div>
  	 </div>
+
+	<br>
 
 	<div class='columnContainer'>
 	        <img src='https://www.universalstudioshollywood.com/tridiondata/ush/en/us/files/images/universal-revenge-of-the-mummy-fire-2800x1197-a.jpg?imwidth=580'>
@@ -65,6 +71,9 @@
 		<p style='margin-top:-10px; margin-bottom:10px;'>Universal Studios Hollywood | Summer 2022</p>
 		<p>I worked with a team of like-minded people to safely and efficiently operate a popular theme-park attraction.</p>
 		<p>At Universal, I learned how to work on a team, interact with new people on a proffesional and personal level, quickly adapt to solve problems and think on my feet, and to handle myself in stressful and overwhelming situations.</p>
+		<div class='skillContainer'>
+			<a>Team Work</a> <a>Customer Service</a> <a>Safety Compliance</a> <a>Themed Entertainment</a> <a>Quick Thinking</a> <a>Problem Solving</a>
+		</div>
       	</div>
   </div>
 	
