--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,6 @@
   </head>
   
   <style>
-	  
   </style>
   
 <body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
@@ -30,6 +29,9 @@
 	          	<p style='margin-top:-10px; margin-bottom:10px;'>Winter - Spring 2024</p>
 		     		<p>Role: <em>Head of Mechanical Design</em></p>
 				<p>Goal: To design, fabricate, and present a fully functional scale rollercoaster featuring multiple safety and controls elements which could thrill Starburst Candies.</p>
+		      		<div class='skillContainer'>	
+		 			<a>Engineering Project Management</a> <a>Mechanical Design</a> <a>Standards Compliance</a> <a>SolidWorks</a> <a>Themed Entertainment Design</a> <a>Creative Engineering</a> 
+				</div>
 		    		<!--<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
 		   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> -->
 		      		<p><button onclick='window.open("projects/rec-2024", "_self")'>View Project</button></p>
@@ -45,11 +47,16 @@
 	          	<p style='margin-top:-10px; margin-bottom:10px;'>2023 - 2025</p>
 				<p>Role: <em>Flow Inlet Engineer</em></p>
 				<p>Goal: Design and construct a flume to simulate the flow of a river to test a PHD research theory on flow control</p>
+		      		<div class='skillContainer'>	
+					<a>Fluid Mechanics</a> <a>SolidWorks</a> <a>Mechanical Design</a> <a>Quality Engineering</a>
+				</div>
 		    		<!--<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
 		   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> -->
 		      		<p><button onclick='window.open("projects/flume-project", "_self")'>View Project</button></p>
 	      </div>
   	</div>
+
+	<br>
 
 	<div class='columnContainer'>
 			<img src='https://d2vlcm61l7u1fs.cloudfront.net/media%2F7f9%2F7f94806f-0c5f-4a10-a841-ebfe45b878f2%2Fphp06nuzn.png'>
@@ -58,9 +65,14 @@
 		          	<p style='margin-top:-10px; margin-bottom:10px;'>Winter 2024</p>
 			     		<p>Role: <em>Programmer</em></p>
 					<p>Goal: Use JavaScript to design a program which could take user-provided input and output the minimum diameter of a machine shaft required to meet a specified factor of safety in given operating and loading conditions.</p>
+			      		<div class='skillContainer'>
+						<a>JavaScript</a> <a>Solid Mechanics</a> <a>Shaft Design</a> <a>ASTM Standards</a> <a>Gear Assembly and Design</a>
+					</div>
 			      		<p><button onclick='window.open("https://reuvenrey.github.io/me/projects/shaft-design-project.html")'>View Project</button></p>
 		      </div>
   	</div>
+
+	<br>
 
 	<div class='columnContainer'>
 	        <img src='https://pbs.twimg.com/media/EmfBgLqUYAAtEfx.jpg'>
@@ -69,14 +81,22 @@
 	          	<p style='margin-top:-10px; margin-bottom:10px;'>Winter - Spring 2023</p>
 		      		<p>Role: <em>Mechanical Team Member</em></p>
 		      		<p>Goal: Design and prototype a mount to secure LED headlights to the submarine in desired positions which could endure rigorous underwater operation.</p>
+		      	<div class='skillContainer'>
+				<a>Mechanical Design</a> <a>Underwater Engineering</a> <a>SolidWorks</a> <a>GitHub</a>
+			</div>
 	      </div>
   	</div>
+
+	<br>
 
 	<div class='columnContainer'>
 		        <img src='https://d2pn8kiwq2w21t.cloudfront.net/original_images/JPL_RedBlack_rgb_stacked_5in_160601.png'>
 	      <div>
 		      	<h2 style='margin-top:0'>JPL Invention Challenge</h2>
 	          	<p style='margin-top:-10px; margin-bottom:10px;'>2018 - 2020</p>
+		      	<div class='skillContainer'>
+				<a>Principles of Engineering</a> <a>Practical Physics</a> <a>Mechanical Design</a>
+			</div>
 	      </div>
 	  </div>
 
