--- a/skills.html
+++ b/skills.html
@@ -11,6 +11,8 @@
   <style>
 	  .porthole div{max-width:200px;}
 	  .porthole img{width:200px;}
+
+	  .fullContainer{background:none;}
   </style>
   
 <body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
@@ -59,7 +61,7 @@
 			  <h3>Microsoft Excel</h3>
 		  </div>
 		  <div>
-			  <img src='https://companyurlfinder.com/marketing/assets/img/logos/atlassian.com.png'>
+			  <img src='https://static.vecteezy.com/system/resources/thumbnails/004/141/669/small/no-photo-or-blank-image-icon-loading-images-or-missing-image-mark-image-not-available-or-image-coming-soon-sign-simple-nature-silhouette-in-frame-isolated-illustration-vector.jpg'>
 			  <h3>Atlassian Collab</h3>
 		  </div>
 		  <div>
@@ -107,15 +109,15 @@
 		 <h1>Fabrication and Machinery</h1>
 	  <div class='portholeContainer'>
 		  <div>
-			  <img src='image_link'>
+			  <img src='https://static.vecteezy.com/system/resources/thumbnails/004/141/669/small/no-photo-or-blank-image-icon-loading-images-or-missing-image-mark-image-not-available-or-image-coming-soon-sign-simple-nature-silhouette-in-frame-isolated-illustration-vector.jpg'>
 			  <h3>Automated Laser Cutter</h3>
 		  </div>
 		  <div>
-			  <img src='image_link'>
+			  <img src='https://static.vecteezy.com/system/resources/thumbnails/004/141/669/small/no-photo-or-blank-image-icon-loading-images-or-missing-image-mark-image-not-available-or-image-coming-soon-sign-simple-nature-silhouette-in-frame-isolated-illustration-vector.jpg'>
 			  <h3>3D Printing</h3>
 		  </div>
 		  <div>
-			  <img src='image_link'>
+			  <img src='https://static.vecteezy.com/system/resources/thumbnails/004/141/669/small/no-photo-or-blank-image-icon-loading-images-or-missing-image-mark-image-not-available-or-image-coming-soon-sign-simple-nature-silhouette-in-frame-isolated-illustration-vector.jpg'>
 			  <h3>Bandsaw and Drill Press</h3>
 		  </div>
 	  </div>
