--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,7 @@
 	  .porthole div{max-width:200px;}
 	  .porthole img{width:200px;}
 
-	  .fullContainer{background:none;}
+	  .fullContainer{background:none; color:white;}
   </style>
   
 <body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
