--- a/education.html
+++ b/education.html
@@ -29,6 +29,9 @@
           	<p style='margin-top:-10px; margin-bottom:10px;'>2021 - 2025 | Bachelors of Science in Mechanical Engineering</p>
           	<p>Current GPA: 3.6</p>
 	      	<p>As a student at UCSD, I have greatly studied the mechanics of materials and engineering-based math and research skills. I have also spent time out of class participating in various engineering clubs and activities.</p>
+	      	<div class='skillContainer'>
+			<a>Critical Thinking</a> <a>Management</a> <a>Design Principles</a> <a>Research</a> <a>Collaboration</a>
+		</div>
       </div>
   </div>
 
@@ -38,7 +41,10 @@
 	      	<h2 style='margin-top:0'>Taft Charter Highschool STEM Magnet</h2>
           	<p style='margin-top:-10px; margin-bottom:10px;'>2021 - 2025 | High School</p>
           	<p>Earned GPA: 3.75</p>
-	      	<p>I was a part of the S.T.E.M magnet at Taft which was a focused group of students studying Science, Technology, Engineering, and Math on a higher level than the general highschool curriculum. This program is what sparked my interest in Engineering and helped to nurture my passion for design and creativity.</p>
+	      	<p>I was a part of the S.T.E.M magnet at Taft which was a focused group of students studying Science, Technology, Engineering, and Math on a higher level than the general highschool curriculum. This program is what sparked my interest in Engineering and helped to nurture my passion for design and creativity.</p>\
+	      	<div class='skillContainer'>
+			<a>Engineering Principles</a> <a>Collaborative Work</a> <a>Analytical Thinking</a> <a>Science and Math</a>
+		</div>
       </div>
   </div>
 
