--- a/projects/flume-project.html
+++ b/projects/flume-project.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://reuvenrey.github.io/me/files/styleSheet.css">
     <link rel="icon" type="image/x-icon" href="https://reuvenrey.github.io/me/files/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAGE_TITLE | Reuven Reyman</title>
+    <title>Flume Project Portfolio | Reuven Reyman</title>
   </head>
 	
   <style>
@@ -20,22 +20,34 @@
   
 <body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
 
-	<div class='banner'>
+	<!--<div class='banner'>
 		<img src='https://reuvenrey.github.io/me/files/images/groupPhotoREC1.jpg'>
-	</div>
+	</div>-->
 
 	<div class='titleBar'>
-		<h1>Page_title</h1>
+		<h1>Control System Flume Project</h1>
 	</div>
 	<div class='subtitleBar'>
-		<p>Subtitle_of_page</p>
+		<p>I was brought on to a team of other engineering students to test a proof of concept curated by a research proffessor at UC San Diego.</p>
 	</div>
 
 	<div class='container'>
-		
+		<h2>Abstract</h2>
+		A research team at UC San Diego is developing a control system for fluid through large channels, such as rivers. The issue is that large river control systems are often spread out over hundreds of miles making it complex to send and retrieve data from various control points. 
+		<p>For this project, we are testing a system that can predict flow patterns based on data collected from relatively close to before and after the control point. In theory, this system can utilize the data to determine the status of flow far upstream and downstream.</p>
 	</div>
 
 	<div class='spacer'></div>
+
+	<br>
+
+	<div class='columnContainer'>
+		<img src='https://images.nationalgeographic.org/image/upload/t_edhub_resource_key_image/v1638886653/EducationHub/photos/jinsha-river.jpg'>
+		<div>
+			<h2>The Problem</h2>
+			Rivers are incredibly hard to predict and the flow patterns of water can change drastically in very little time. Controlling fluid flow on such a large scale can prove daunting, especially when control centers are spread far apart from one another. 
+		</div>
+	</div>
 
 
 
