--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,22 @@
 	<br>
 
 	<div class='columnContainer'>
+			<img src='https://gcparksandresorts.github.io/gcresorthighland/webresources/images/fotd1.jpg'>
+		      <div>
+			      	<h2 style='margin-top:0'>Theme Park HTML Website</h2>
+		          	<p style='margin-top:-10px; margin-bottom:10px;'>2020 - Current</p>
+			     		<p>Role: <em>Programmer and Graphic Designer</em></p>
+					<p>Goal:Use javascript, HTML, CSS, and graphic design to create an interactive and fully funtional website advertising a disney-inspired theme park.</p>
+			      		<div class='skillContainer'>
+						<a>HTML and CSS</a> <a>Graphic Design</a> <a>Marketing</a> <a>JavaScript</a> <a>Web Design</a>
+					</div>
+			      		<p><button onclick='window.open("https://reuvenrey.github.io/me/projects/theme-park-website.html")'>View Project</button> | <a href='https://gcparksandresorts.github.io/gcresorthighland/'>View Final Product</a></p>
+		      </div>
+  	</div>
+
+	<br>
+
+	<div class='columnContainer'>
 	        <img src='https://pbs.twimg.com/media/EmfBgLqUYAAtEfx.jpg'>
 	      <div>
 		      	<h2 style='margin-top:0'>Triton Robo-Sub (Robotic Submarine)</h2>
